Fix alignment of login form

--- a/intranet/static/css/base.css
+++ b/intranet/static/css/base.css
@@ -189,11 +189,10 @@ textarea {
     border: 1px solid rgb(204,204,204);
     border-radius: 3px;
     box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
-    -webkit-transition: border 0.05s ease-in 0;
+    /*-webkit-transition: border 0.05s ease-in 0;
     -moz-transition: border 0.05s ease-in 0;
     -o-transition: border 0.05s ease-in 0;
-    transition: border 0.05s ease-in;
-
+    transition: border 0.05s ease-in;*/
     vertical-align: middle;
 
     behavior: url("/static/js/PIE/PIE.htc");
