--- a/intranet/static/css/login.css
+++ b/intranet/static/css/login.css
@@ -5,7 +5,7 @@
     top: 50%;
 
     height: 154px;
-    margin-top: -77px;
+    margin-top: -139px;
 
     width: 200px;
     margin-left: -100px;
